added more tests and improved page models

--- a/organization/simple-store.html
+++ b/organization/simple-store.html
@@ -1,6 +1,6 @@
 <html lang="en">
 <head>
-    <title>Sample system under test</title>
+    <title>Car Parts For U</title>
     <!-- This is sample code for Playwright tests to work against, probably don't want to do it like this for reals -->
     <!-- in fact you probably don't want to look much further -->
 
@@ -129,11 +129,11 @@
 <body>
 
 <div class="menu-container">
-    <a class="menu-item" href="#catalog">Catalog</a><br/>
-    <a class="menu-item" href="#cart">Cart</a><br/>
-    <a class="menu-item" href="#checkout">Checkout</a><br/>
+    <a class="menu-item" id="catalog-menu-item" href="#catalog">Catalog</a><br/>
+    <a class="menu-item"  id="cart-menu-item" href="#cart">Cart</a><br/>
+    <a class="menu-item"  id="checkout-menu-item" href="#checkout">Checkout</a><br/>
     <!--<a class="menu-item" href="#shipping">Shipping</a><br/>-->
-    <a class="menu-item" href="#reviews">Reviews</a><br/>
+    <a class="menu-item"  id="reviews-menu-item" href="#reviews">Reviews</a><br/>
 </div>
 
 <div id="catalog">
